Bug 533619 - [11][batch][compiler] support command line --enable-preview
Change-Id: I7e37f168e8011ca88d68a302ffb9e4a78526997b
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>